@@ -1,3 +1,7 @@
+2002-02-25  James Tanis  <jtt@saint.sysdetect.com>
+
+	* src/proto.c (main): Clarify the arc preprocessing.
+
 2002-02-22  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_addrgroup.c (do_net_init_af_inet_tcp_connect): remove dead code
